# bowyer-watson

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc
include/: Application.h  Circle.h  Key.h  Node.h  Segment.h  Shader.h  Triangle.h  Triangulation.h  Util.h  Vertex.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: Application.cc  Application.h  Circle.cc  Circle.h  Key.h  Node.h  Segment.h  Shader.cc  Shader.h  Triangle.cc  Triangle.h  Triangulation.cc  Triangulation.h  Util.h  Vertex.h
